# ml-starter-lab-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.pt-BR.md  create_ml_starter.py  rendered_output.py  repro_render.py  test_results.txt  writer.py
docs/: README.md  README.pt-BR.md  experiment-visualization.md  (+5 more)
examples/generated-project-sample/: .env.example  .gitignore  README.md  pyproject.toml  requirements-notebook.txt  requirements.txt
examples/generated-project-sample/configs/: config.json
examples/generated-project-sample/docs/: data-dictionary.md
examples/generated-project-sample/notebooks/: 01_eda.ipynb
examples/generated-project-sample/reports/: experiment-log.md  model-report.md  modeling-notes.md
examples/generated-project-sample/src/sample_ml_project/: __init__.py  config.py  data.py  eda.py  evaluate.py  feature_measurement.py  features.py  metrics.py  notebook_factory.py  optimization.py  predict.py  preprocessing.py  train.py
examples/generated-project-sample/tests/: test_features.py
verification_proj/: README.md  pyproject.toml  requirements-ml.txt
verification_proj/configs/: config.json  problem_profile.json
verification_proj/docs/: demo-scenario.md
verification_proj/notebooks/: 01_eda.ipynb
verification_proj/reports/: baseline-results.md  dataset-advice.md  evaluation-report.md  learning-notes.md  modeling-notes.md
verification_proj/src/verification_pkg/: advisor.py  data.py  eda.py  evaluate.py  features.py  guide.py  lab.py  learning.py  learning_workspace.py  metrics.py  predict.py  preprocessing.py  train.py  visualization.py
verification_proj/src/verification_pkg/core/: config.py  data.py  readiness.py
verification_proj/tests/: test_features.py
(+267 files in other folders)
