[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verification_pkg"
version = "0.1.0"
description = "verification_proj"
requires-python = ">=3.12,<3.13"

# Intentionally without dependencies.
# Add pandas, scikit-learn, xgboost, tensorflow, keras etc. only when the project needs them.

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
