
[project]
name = "sample_ml_project"
version = "0.1.0"
description = "Sample ML Project"
requires-python = ">=3.11"

# Intencionalmente sem dependências.
# Adicione pandas, scikit-learn, xgboost, tensorflow, keras etc. somente quando o projeto precisar.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
