[project]
name = "sample_ml_project"
version = "0.1.0"
description = "sample_ml_project"
requires-python = ">=3.12,<3.13"

# Intencionalmente sem dependências.
# Adicione pandas, scikit-learn, xgboost, tensorflow, keras etc. somente quando o projeto precisar.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
