[project]
name = "sample_ml_project"
version = "0.1.0"
description = "sample_ml_project"
requires-python = ">=3.12,<3.13"

# Intentionally without dependencies.
# Add pandas, scikit-learn, xgboost, tensorflow, keras etc. only when the project needs them.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
